fix bats